Complete API update for post in DRAFT status